Closed
Bug 1875821
Opened 1 year ago
Closed 1 year ago
Perma Linux SM [Tier-2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:1253:18: error: use of undeclared identifier 'StringFromCharCode'; did you mean 'StringFromCharCodeNoGC'?
Categories
(Core :: JavaScript Engine, defect, P5)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
124 Branch
Tracking | Status | |
---|---|---|
firefox-esr115 | --- | unaffected |
firefox122 | --- | unaffected |
firefox123 | --- | unaffected |
firefox124 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: anba)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: nbeleuzu [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=444131623&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/NAmk2U5VR8mXr1vBXq2isA/runs/0/artifacts/public/logs/live_backing.log
[task 2024-01-22T13:39:53.146Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/config/external/icu/common'
[task 2024-01-22T13:39:53.706Z] gmake[4]: Entering directory '/builds/worker/workspace/obj-spider/js/src'
[task 2024-01-22T13:39:53.706Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -o PortableBaselineInterpret.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -fstack-clash-protection -DNDEBUG=1 -DTRIMMED=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/checkouts/gecko/intl/icu_capi/c/include -I/builds/worker/workspace/obj-spider/dist/include -I/builds/worker/workspace/obj-spider/dist/include/nspr -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -Xclang -load -Xclang /builds/worker/workspace/obj-spider/build/clang-plugin/libclang-plugin.so -Xclang -add-plugin -Xclang moz-check -O3 -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wenum-compare-conditional -Wenum-float-conversion -Wno-error=deprecated -Wno-error=deprecated-anon-enum-enum-conversion -Wno-error=deprecated-enum-enum-conversion -Wno-error=deprecated-pragma -Wno-error=deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-unknown-warning-option -Werror=format -fstandalone-debug -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/PortableBaselineInterpret.o.pp /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp
[task 2024-01-22T13:39:53.706Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:1253:18: error: use of undeclared identifier 'StringFromCharCode'; did you mean 'StringFromCharCodeNoGC'?
[task 2024-01-22T13:39:53.706Z] 1253 | result = StringFromCharCode(cx, c);
[task 2024-01-22T13:39:53.706Z] | ^~~~~~~~~~~~~~~~~~
[task 2024-01-22T13:39:53.706Z] | StringFromCharCodeNoGC
[task 2024-01-22T13:39:53.706Z] /builds/worker/checkouts/gecko/js/src/jit/VMFunctions.h:386:17: note: 'StringFromCharCodeNoGC' declared here
[task 2024-01-22T13:39:53.706Z] 386 | JSLinearString* StringFromCharCodeNoGC(JSContext* cx, int32_t code);
[task 2024-01-22T13:39:53.706Z] | ^
[task 2024-01-22T13:39:53.706Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_LinearizeForCodePointAccess'
[task 2024-01-22T13:39:53.706Z] 427 | CACHE_IR_OPS(OP)
[task 2024-01-22T13:39:53.707Z] | ^
[task 2024-01-22T13:39:53.707Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_ToRelativeStringIndex'
[task 2024-01-22T13:39:53.707Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_LoadStringAtResult'
[task 2024-01-22T13:39:53.707Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:427:20: error: use of undeclared label 'cacheop_LoadStringCodePointResult'
[task 2024-01-22T13:39:53.707Z] 5 errors generated.
[task 2024-01-22T13:39:53.707Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: PortableBaselineInterpret.o] Error 1
[task 2024-01-22T13:39:53.707Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
Comment 1•1 year ago
|
||
:anba, since you are the author of the regressor, bug 1874683, could you take a look?
For more information, please visit BugBot documentation.
Flags: needinfo?(andrebargull)
Assignee | ||
Comment 2•1 year ago
|
||
Updated•1 year ago
|
Assignee: nobody → andrebargull
Status: NEW → ASSIGNED
Assignee | ||
Updated•1 year ago
|
Flags: needinfo?(andrebargull)
Pushed by andre.bargull@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/6a058f549e8c
Mark unsupported pbl CacheIR opcodes and add missing include. r=jandem
Comment 4•1 year ago
|
||
There still are the following failure lines to fix: https://treeherder.mozilla.org/logviewer?job_id=444182431&repo=autoland
[task 2024-01-22T18:45:18.390Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:4425:26: error: use of undeclared identifier 'AsyncFunctionResolveKind'
[task 2024-01-22T18:45:18.390Z] 4425 | auto resolveKind = AsyncFunctionResolveKind(GET_UINT8(pc));
[task 2024-01-22T18:45:18.390Z] | ^
[task 2024-01-22T18:45:18.390Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_AsyncReject'
[task 2024-01-22T18:45:18.390Z] 2453 | FOR_EACH_OPCODE(OPCODE_LABEL)
[task 2024-01-22T18:45:18.390Z] | ^
[task 2024-01-22T18:45:18.390Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_ThrowWithStack'
[task 2024-01-22T18:45:18.390Z] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:2453:23: error: use of undeclared label 'label_ExceptionAndStack'
[task 2024-01-22T18:45:18.390Z] 4 errors generated.
[task 2024-01-22T18:45:18.390Z] gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:689: PortableBaselineInterpret.o] Error 1
[task 2024-01-22T18:45:18.390Z] gmake[4]: Leaving directory '/builds/worker/workspace/obj-spider/js/src'
Flags: needinfo?(andrebargull)
Updated•1 year ago
|
Summary: Perma Linus SM [Tier-2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:1253:18: error: use of undeclared identifier 'StringFromCharCode'; did you mean 'StringFromCharCodeNoGC'? → Perma Linux SM [Tier-2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:4425:26: error: use of undeclared identifier 'AsyncFunctionResolveKind'
Assignee | ||
Comment 5•1 year ago
|
||
That are new failures from bug 1843499.
Flags: needinfo?(andrebargull)
Comment 6•1 year ago
|
||
Thanks for looking, filed Bug 1875894.
Summary: Perma Linux SM [Tier-2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:4425:26: error: use of undeclared identifier 'AsyncFunctionResolveKind' → Perma Linux SM [Tier-2] /builds/worker/checkouts/gecko/js/src/vm/PortableBaselineInterpret.cpp:1253:18: error: use of undeclared identifier 'StringFromCharCode'; did you mean 'StringFromCharCodeNoGC'?
Comment 7•1 year ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
status-firefox124:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
Comment hidden (Intermittent Failures Robot) |
Comment 9•1 year ago
|
||
Set release status flags based on info from the regressing bug 1874683
status-firefox122:
--- → unaffected
status-firefox123:
--- → unaffected
status-firefox-esr115:
--- → unaffected
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•