Bug 1875821: Mark unsupported pbl CacheIR opcodes and add missing include. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D199236